--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
