--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "include": [
+    "./src/**/*"
+  ],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
@@ -17,6 +20,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,    
   }
 }
