- Se agregó swagger para documentar la API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": [
-    "./src/**/*"
-  ],
+  "include": ["./src/**/*", "src/config"],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
@@ -20,6 +18,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "resolveJsonModule": true,    
+    "resolveJsonModule": true
   }
 }
