--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src/**/*", "src/config"],
+  "include": ["./src/**/*", "src/common/config"],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
