--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
     "version": 2,
-    "builds": [],
+    "builds": [
+      {
+        "src": "dist/main.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/main.ts"
+        "dest": "dist/main.js"
       }
     ]
-}
-  
+  }
