--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
     "@types/bcryptjs": "^2.4.6",
+    "bad-words-next": "^2.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
